--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="add">Add</string>
     <string name="review_ordres">Review Orders</string>
     <string name="show_more">Show More</string>
+    <string name="title_activity_restaurant">RestaurantActivity</string>
 </resources>
